objects/Integration_Solution_Contact_Junction__c.object
<CustomObject>
    <description>What it does?  Object holding information about the contact for an integration solution.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.

Part of the DEMO REQUEST process.</description>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>What it does?  Holds the type of contact associated with the integration solution.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Solution__c</fullName>
        <description>What it does?  Holds a link between integration solutions and the integration solution contact.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Integration Solution</label>
        <referenceTo>Integration_Solution__c</referenceTo>
        <relationshipLabel>Integration Solution Contacts</relationshipLabel>
        <relationshipName>Integration_Solution_Contact_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Holds the integration user contact.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Integration_Solution_Contact_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Integration Solution Contact</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Integration Solution  Contact Junction N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Solution Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>